# ipc-atomic-execution

./: Cargo.toml
examples/fungible-token/: Cargo.toml  TODO
examples/fungible-token/src/: lib.rs  state.rs
src/: atomic.rs  lib.rs  state.rs  types.rs
