[package]
name = "ipc_atomic_exec_fungible_token_sample"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["Protocol Labs and the contributors"]
edition = "2018"
repository = "https://github.com/consensus-shipyard/ipc-atomic-execution"
keywords = ["web3", "filecoin", "FVM", "inter-planetary consensus"]

[dependencies]
ipc_atomic_execution = { path = "../../" }
ipc_gateway = { git = "https://github.com/consensus-shipyard/ipc-gateway.git" }

#frc46_token = { version = "3.0.0", git = "https://github.com/helix-onchain/filecoin" }
frc42_dispatch = { version = "2.0.0", git = "https://github.com/helix-onchain/filecoin" }
fvm_actor_utils = { version = "2.0.0", git = "https://github.com/helix-onchain/filecoin" }

fvm_shared = { version = "3.0.0-alpha.5", default-features = false }
fvm_ipld_hamt = "0.5.1"
fvm_ipld_blockstore = "0.1.1"
fvm_ipld_encoding = "0.3.0"
fvm_primitives = { git = "https://github.com/consensus-shipyard/fvm-utils", branch = "v3.0.0", package = "primitives"}
fvm_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", branch = "v3.0.0", package = "fil_actors_runtime", features = ["fil-actor"] }

cid = { version = "0.8.3", default-features = false, features = ["serde-codec"] }
serde_tuple = "0.5"
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0.56"
thiserror = "1.0.37"
integer-encoding = "3.0.4"

[dev-dependencies]
fvm_actors_runtime = { git = "https://github.com/consensus-shipyard/fvm-utils", branch = "v3.0.0", package = "fil_actors_runtime", features = ["fil-actor", "test_utils"] }

[build-dependencies]
wasm-builder = "3.0.1"
wasmtime = "0.35.2"
